--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
   <script src="https://kit.fontawesome.com/f49d415fdb.js" crossorigin="anonymous"></script>  <!-- font dos icones-->
   <script src="https://smtpjs.com/v3/smtp.js"></script>   
   <link rel="preconnect" href="https://fonts.gstatic.com">
